create github pages

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section mbr-parallax-background" id="msg-box6-u" data-rv-view="102" style="background-image: url(assets/images/mbr-1920x1071.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section mbr-parallax-background" id="msg-box6-u" data-rv-view="102" style="background-image: url(assets/images/mbr-1920x1071.jpg); padding-top: 40px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -138,7 +138,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="http://m.me/mariopelser" target="_blank">I WANT TO BE A CUSTOMER</a> </div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="http://m.me/roxyrogers.ibuumerang" target="_blank">I WANT TO BE A CUSTOMER</a> </div>
             </div>
         </div>
     </div>
@@ -199,7 +199,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="http://www.mariopelser.ibuumerang.com" target="_blank">READY TO JOIN NOW</a> <a class="btn btn-primary-outline btn-primary" href="http://m.me/mariopelser" target="_blank">I WOULD LIKE TO SPEAK TO YOU IN PERSON<br></a></div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="http://zerra.ibuumerang.com" target="_blank">READY TO JOIN NOW</a> <a class="btn btn-primary-outline btn-primary" href="http://m.me/roxyrogers.ibuumerang" target="_blank">I WOULD LIKE TO SPEAK TO YOU IN PERSON<br></a></div>
             </div>
         </div>
     </div>
@@ -292,7 +292,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="http://www.mariopelser.ibuumerang.com" target="_blank">JOIN NOW</a> </div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="http://zerra.ibuumerang.com" target="_blank">JOIN NOW</a> </div>
             </div>
         </div>
     </div>
@@ -338,7 +338,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"><a class="btn btn-primary" href="http://www.mariopelser.ibuumerang.com" target="_blank">Join our team now</a> </div>
+                <div class="text-xs-center"><a class="btn btn-primary" href="http://zerra.ibuumerang.com" target="_blank">Join our team now</a> </div>
             </div>
         </div>
     </div>
@@ -407,15 +407,15 @@
                 <div><img src="assets/images/ibuumeranglogo-128x48.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Address</strong><br>Swakopmund<br>Namibia</p>
+                <p><strong>Address</strong><br>Minneapolis<br>Minnesota<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Contacts</strong><br>
-Email: <a href="mailto:igobuum.vip@gmail.com">igobuum.vip@gmail.com</a><br>
-Phone: +264 81 741 5414<br></p>
+Email: <a href="mailto:igobuum.vip@gmail.com">Ibuumerang@Yahoo.com</a><br>
+Phone: 612.444.1644<br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Links</strong><br><a href="https://www.facebook.com/mariopelser" target="_blank" class="text-primary">www.facebook.com/m</a>ariopelser<br><a href="http://www.mariopelser.ibuumerang.com" target="_blank">www.ibuumerang.com</a><br></p>
+                <p><strong><a href="http://zerra.ibuumerang.com" target="_blank">Links</a></strong><br><a href="https://www.facebook.com/roxyrogers.ibuumerang" target="_blank">www.facebook.com/roxyrogers.ibuumerang</a><br><a href="http://zerra.ibuumerang.com" target="_blank">www.ibuumerang.com</a><br></p>
             </div>
 
         </div>
